<resources>
    <string name="app_name">Tela Cadastro</string>
    <string name="cadastrar_pessoa">Cadastrar Pessoa</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="nome_pai">Nome do Pai:</string>
    <string name="nome_mae">Nome do Mãe:</string>
    <string name="rua">Rua:</string>
    <string name="numero">Número</string>
    <string name="cadastrar">Cadastrar</string>
</resources>