<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cadastrar_pessoa"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etNome"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/txtNumero"
        app:layout_constraintStart_toEndOf="@+id/txtRua"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:autofillHints=""
        android:ems="3"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNumero" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="12"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMae"
        app:layout_constraintTop_toBottomOf="@+id/txtPai" />

    <EditText
        android:id="@+id/etPai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="12"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPai" />

    <TextView
        android:id="@+id/txtMae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="2dp"
        android:text="@string/nome_mae"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName6"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:autofillHints=""
        android:ems="3"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtIdade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtIdade" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/nome"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNome"
        app:layout_constraintEnd_toStartOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:text="@string/nome_pai"
        app:layout_constraintEnd_toStartOf="@+id/etPai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <TextView
        android:id="@+id/txtRua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="4dp"
        android:text="@string/rua"
        app:layout_constraintBaseline_toBaselineOf="@+id/etRua"
        app:layout_constraintEnd_toStartOf="@+id/etRua"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/idade"
        app:layout_constraintBottom_toBottomOf="@+id/etNome"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toEndOf="@+id/etNome" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/txtIdade"
        app:layout_constraintStart_toEndOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txtNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/numero"
        app:layout_constraintBottom_toBottomOf="@+id/etRua"
        app:layout_constraintEnd_toStartOf="@+id/etNumero"
        app:layout_constraintStart_toEndOf="@+id/etRua" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero"
        app:layout_constraintVertical_bias="0.807" />

</androidx.constraintlayout.widget.ConstraintLayout>

